2207261755 그래프 API 수정
그래프 API 수정

--- a/com-project-clean/src/main/resources/templates/statistics/totalSales.html
+++ b/com-project-clean/src/main/resources/templates/statistics/totalSales.html
@@ -63,7 +63,7 @@ table tr {
 </head>
 <body>
 	<main>
-		<div th:include="common/header.html"></div>
+		<div th:replace="/common/Header.html"></div>
 		<div th:include="statistics/statisticsAside.html"></div>
 		<article>
 			<section>
@@ -81,32 +81,36 @@ table tr {
 				<br>
 				<br>
 				
-				<script type="text/javascript">
-      google.charts.load('current', {'packages':['corechart']});
-      google.charts.setOnLoadCallback(drawVisualization);
-
-      function drawVisualization() {
-        // Some raw data (not necessarily accurate)
-        var data = google.visualization.arrayToDataTable([
-          ['직급명', '평균 급여' ],
-          ['총 매출 금액',  1844000 ],
-          ['순 수익 금액',  -67356000 ],
-                   
-        ]);
-        
-        var options = {
-          title : '회사 매출 통계 그래프',
-          vAxis: {title: '금액'},
-          seriesType: 'bars',
-          series: {5: {type: 'line'}}
-        };
-
-        var chart = new google.visualization.ComboChart(document.getElementById('chart_div'));
-        chart.draw(data, options);
-      }
-      </script>
-
-    <div id="chart_div" style="width: 900px; height: 500px;"></div>
+				<script type="text/javascript" th:inline="javascript">
+			      google.charts.load('current', {'packages':['corechart']});
+			      google.charts.setOnLoadCallback(drawVisualization);
+			
+			      
+			      function drawVisualization() {
+			        // Some raw data (not necessarily accurate)
+			        var data = google.visualization.arrayToDataTable([
+			          ['직급명', '급여 액수'],
+			          ['', 0],
+			          ['총 매출 금액', '[[${ totalSales }]]'],
+			          ['순 수익 금액', '[[${ netProfit }]]']
+			          
+			         			        	  
+			          ]);
+			        
+			        var options = {
+			          title : '회사 매출 통계 그래프',
+			          vAxis: {title: '금액'},
+			          seriesType: 'bars',
+			          series: {5: {type: 'line'}}
+			          
+			        };
+			
+			        var chart = new google.visualization.ComboChart(document.getElementById('chart_div'));
+			        chart.draw(data, options);
+			      	}
+			      </script>
+			
+			    <div id="chart_div" style="width: 900px; height: 500px;"></div>
 			</section>
 		</article>
 	</main>
