--- a/com-project-clean/src/main/resources/templates/statistics/adminSalary.html
+++ b/com-project-clean/src/main/resources/templates/statistics/adminSalary.html
@@ -109,7 +109,7 @@ table tr {
 				<br>
 				
 
-<script type="text/javascript">
+<script type="text/javascript" th:inline="javascrIpt">
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawVisualization);
 
@@ -117,11 +117,12 @@ table tr {
         // Some raw data (not necessarily accurate)
         var data = google.visualization.arrayToDataTable([
           ['직급명', '평균 급여' ],
-          ['총관리자',  18400000 ],
-          ['일반관리자',  2300000 ],
+          ['', 0],
+          ['총관리자', 0],
+          ['일반관리자', 0],
           ['보안담당자', 2300000  ],
           ['인사담당자',  2622000 ],        
-          ['재정담당자',  3956000 ],             
+          ['재정담당자',  3956000 ]          
         ]);
 
         var options = {
