--- a/com-project-clean/src/main/resources/templates/statistics/employeeTotalWorkhours.html
+++ b/com-project-clean/src/main/resources/templates/statistics/employeeTotalWorkhours.html
@@ -91,8 +91,9 @@ table tr {
         // Some raw data (not necessarily accurate)
         var data = google.visualization.arrayToDataTable([
           ['', '근무시간' ],
-          ['총 근무시간',  409 ],
-          ['평균 근무시간',  15 ],
+          ['', 0 ],
+          ['총 근무시간', '[[${ employeeTotalHours }]]' ],
+          ['평균 근무시간', '[[${ employeeAvgHours }]]' ]
                    
         ]);
         
