--- a/com-project-clean/src/main/resources/templates/statistics/adminSalary.html
+++ b/com-project-clean/src/main/resources/templates/statistics/adminSalary.html
@@ -118,8 +118,8 @@ table tr {
         var data = google.visualization.arrayToDataTable([
           ['직급명', '평균 급여' ],
           ['', 0],
-          ['총관리자', 0],
-          ['일반관리자', 0],
+          ['총관리자', 18400000],
+          ['일반관리자', 2001000],
           ['보안담당자', 2300000  ],
           ['인사담당자',  2622000 ],        
           ['재정담당자',  3956000 ]          
@@ -137,11 +137,9 @@ table tr {
         chart.draw(data, options);
       }
     </script>
-  </head>
-  <body>
+
     <div id="chart_div" style="width: 900px; height: 500px;"></div>
-  </body>
-  </html>
+
 			</section>
 		</article>
 	</main>
