--- a/com-project-clean/src/main/resources/templates/statistics/adminSalary.html
+++ b/com-project-clean/src/main/resources/templates/statistics/adminSalary.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="commonLayout.css">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
+ <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	
 <style>
 tr:nth-of-type(1) {
