--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -178,7 +178,7 @@
                             </a>
                			<th:block sec:authorize="hasRole('ADMIN')">
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/statistics/totalSales">총 매출 조회</a></li>
+                            <!--     <li><a class="dropdown-item" href="/statistics/totalSales">총 매출 조회</a></li> -->
                                 <li><a class="dropdown-item" href="/statistics/adminSalary">관리자 평균 급여 조회</a></li>
                             </ul>
                         </th:block>
