--- a/com-project-clean/src/main/resources/templates/statistics/statisticsAside.html
+++ b/com-project-clean/src/main/resources/templates/statistics/statisticsAside.html
@@ -83,8 +83,8 @@ body {
 		<div class="dropdown-container">
 			<th:block sec:authorize="hasRole('ADMIN')">
 				<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-					<li><a class="dropdown-item" href="/statistics/totalSales">총
-							매출 조회</a></li>
+<!-- 					<li><a class="dropdown-item" href="/statistics/totalSales">총
+							매출 조회</a></li> -->
 					<li><a class="dropdown-item" href="/statistics/adminSalary">관리자
 							평균 급여 조회</a></li>
 				</ul>
