2022/07/27 12:53 delete text 1. hr / boss 등 작업 편의성을 위해 사용했던 단어 삭제 2. vacation에서 return과 lastConfirm 목록 삭제

--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminDetail.html
@@ -172,7 +172,7 @@
 
 
 				<th:block sec:authorize="hasRole('ROLE_ADMIN_HR')">
-	   	 		<td><div id="update_HR"><input type="button" class="btn_hr" id="updateHR" value="HR수정"></div></td>
+	   	 		<td><div id="update_HR"><input type="button" class="btn_hr" id="updateHR" value="수정"></div></td>
 	   	 		</th:block>
 	   	 		 
 	   	 		<th:block sec:authorize="hasRole('ROLE_ADMIN_HR')">
