--- a/com-project-clean/src/main/resources/templates/statistics/bestEmployee.html
+++ b/com-project-clean/src/main/resources/templates/statistics/bestEmployee.html
@@ -22,8 +22,8 @@ margin:0 auto;
 
 #picture {
 
- height:240px;
- width:390px;
+ height:390px;
+ width:240px;
  margin:0 auto;
   
 }
@@ -36,7 +36,7 @@ div2 {
 		text-align: center;
 		font-weight: bold;
 		font-size:25;
-		color: #575757;
+		color: black;
 		
 }
 
@@ -108,14 +108,14 @@ table tr {
 }
 section {
 
-width: 70% !important;
+	width: 70% !important;
 
 }
 
-#center {
 
-margin-left: 43%
-
+.nocss td{
+ 	background-color: white;
+ 	border-style: hidden;
 }
 
 </style>
@@ -130,11 +130,13 @@ margin-left: 43%
 			<!-- 	<h4 id="title" align="center">7월 근무시간 누적 통계</h4> -->
 				<div  id="top_employees">
 				
-					<div2 id="center">
-						<td>■ 이달의 우수직원</td> 
-						<br>
-						<td id="center">누적된 근무시간이 많은 직원은 이달의 우수직원이 된다.</td>
-					</div2>
+					<div id="center">
+					<table class ="nocss">
+						<tr><td>■ 이달의 우수직원<td></tr>
+						
+						<tr><td>누적된 근무시간이 많은 직원은 이달의 우수직원이 된다.<td></tr>
+					</table>
+					</div>
 					<div id="picture">
 					    <br>
 			    		<img id="pictureImg" th:src="@{/adminEmployeePicture/} + ${bestEmployee.employeePictureSaveName}" alt="사진을 등록해주세요" width="100%" height="100%"></th>
