--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
@@ -98,7 +98,7 @@
 	                      </select>
 
 	                      <div class="warning" id="emailCheckMessage">5~12자리 대소문자 + 영어로 입력해주세요</div>
-	                      <div class="warning" id="selfEmailCheckMessage">옳바른 도메을 입력해주세요</div>
+	                      <div class="warning" id="selfEmailCheckMessage">옳바른 도메인을 입력해주세요</div>
 	                      </td>
 	              		<td style="display: none;"><input id="employeeEmail" name="employeeEmail" type="text"/></td>
 	              		
