--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/returnEmployeeList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/returnEmployeeList.html
@@ -55,7 +55,7 @@
              <form name="mainPage">
 				<input type="hidden" value="0" name=page>
 	        </form>
-	            <div id="paging" class="buttonBox" style="display: flex; justify-content: center;">
+	            <div id="paging" class="pagingBox" style="display: flex; justify-content: center;">
 	            <!-- /* 페이징 버튼들어올 공간 */ -->
 				</div>
         </section>
