--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
@@ -52,13 +52,12 @@
 	<input hidden type="text" th:value="${employeeName}" class="employeeName" id="employeeName">
 	<input hidden type="text" th:value="${employeeName}" class="employeeName" id="client">
 
-	<form hidden class="form-inline">
-    	<div class="form-group">
-        	<input type="text" id="sendingMessage" class="form-control">
-        	<input type="text" id="sendingName" class="form-control">
-        	<input type="text" id="path" class="form-control">
-	    	<button id="send" class="btn btn-default" type="submit">Send</button>
-    	</div>
+	<form hidden class="form-inline" id="sendForm">
+	    <div>
+	        <input type="text" id="sendingMessage">
+	        <input type="text" id="sendingName" >
+	    </div>
+	    <button id="send" type="submit">Send</button>
 	</form>
 	
 <!-- OpnionArea script -->
@@ -87,7 +86,6 @@
 				
 	    		if(confirm("서류를 반려하시겠습니까? 직원에게 알림이 전송됩니다.")){
 	    			
-	    			$("#path").val("/employee/checkList/denial/select")
 	    			$("#sendingMessage").val("체크리스트가 반려되었습니다.")
 	    			$("#sendingName").val(userName) 
 	    			
@@ -137,7 +135,6 @@
 			
 	    		if(confirm("서류를 승인하시겠습니까? 해당 직원에게 알림이 전송됩니다.")){
 	    			
-	    			$("#path").val("/employee/checkList/accept/select")
 	    			$("#sendingMessage").val("체크리스트가 승인되었습니다. 급여 확인 부탁드립니다.")
 	    			$("#sendingName").val(userName)
 	    			
