--- a/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
@@ -18,13 +18,6 @@
 <body>
 	<input hidden type="text" th:value="${userId}" class="employeeName" id="employeeName">
 	<input hidden type="text" th:value="${employeeName}" class="employeeName" id="client">
-	<form hidden id="sendForm">
-    	<div>
-     	 	<input type="text" id="sendingMessage">
-        	<input type="text" id="sendingName" >
-    	</div>
-    	<button id="send" type="submit">Send</button>
-	</form>
 
 	<section>
 		<form method="post" action="/employee/checkList/update"  enctype="multipart/form-data" id="formSender">
@@ -86,9 +79,6 @@
     		const jbHtml = $( 'section' ).html();
     		if(confirm("체크리스트를 전송하시겠습니까?")){
     			
-    			$("#sendingMessage").val("체크리스트가 제출되었습니다.")
-    			$("#sendingName").val(userName)
-    			
     			$.ajax({
     				url: "/employee/checkList/update",
     				type:"POST",
@@ -101,7 +91,7 @@
 						location.href="/employee/checkList/selectMyCheckList"
     				},
     				error : function(request, status){
-    					alert("전송 실패")
+    					alert("전송 실패. 네트워크를 확인 해 주세요.")
     				}
     			})
     		 }
