--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectMyCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectMyCheckList.html
@@ -54,7 +54,9 @@
 					
 					const $table = $("#taskInfo tbody");
 					$table.html("");
+					
 					for(var index in data){
+						
 						$tr = $("<tr>");
 						$noTd = $("<td1>").addClass('rn').text(data[index].reservationNo);
 						$nameTd = $("<td>").text(data[index].userName);
@@ -70,10 +72,11 @@
 						$tr.append($paymentTd);
  						$tr.append($buttonTd); 
 						$table.append($tr);
+						
 					};
 				},
 				error:function(error){
-					console.log(error);
+					alert("데이터 전송 실패. 관리자에게 문의해주세요.")
 				}
 			});
 			
@@ -95,29 +98,23 @@
 						const businessStartDay = button.parentNode.querySelector('.st').innerText.substring(8, 10)
 						const businessStartHours = button.parentNode.querySelector('.st').innerText.substring(10, 16);
 						
-						 if(nowDay == businessStartDay){ 
-							console.log(businessStartHours)
-							 if(businessStartHours > nowHours && businessStartHours < maxHours){ 
+//						if(nowDay == businessStartDay){ 
+							
+//							if(businessStartHours > nowHours && businessStartHours < maxHours){ 
 							
 								const resNo1 = document.querySelectorAll('table#taskInfo tbody tr td1');
 								const resNo2 = resNo1[i];
 								var resNo3 = resNo2.parentNode.querySelector('.rn').innerText;
 								
  							 	location.href="/employee/checkList/start?re="+ resNo3;
- 						} else{
+ 							 	
+//							} else{ alert("업무를 시작할 수 없습니다. ")};
 							
-							alert("업무를 시작할 수 없습니다. ")
-						};
- 							
-						 } else{
-							
-							alert("업무를 시작할 수 없습니다. ")
-						};  
-					}						
-
-				}
-				
-			}, 2000)};
+//						} else{alert("업무를 시작할 수 없습니다. ")};  
+						
+					};						
+				};
+			}, 1000)};
    	</script>
    	
 </body>
